Added Sync / Session ID to Activity.
Locked behind an unstable feature flag, as these fields are not
officially documented, and can change at any time. As such, these fields
are by default exempt from any stability guarantees.

I also cleaned up the features section of the Cargo.toml file, by
removing any newline splits that I deemed unnecessary.

Signed-off-by: Kamran Mackey <kamranm1200@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -95,45 +95,15 @@ version = "0.2"
 package = "http"
 
 [features]
-default = [
-    "builder",
-    "cache",
-    "client",
-    "framework",
-    "gateway",
-    "model",
-    "http",
-    "standard_framework",
-    "utils",
-    "rustls_backend",
-]
-default_native_tls = [
-    "builder",
-    "cache",
-    "client",
-    "framework",
-    "gateway",
-    "model",
-    "http",
-    "standard_framework",
-    "utils",
-    "native_tls_backend",
-]
+default = ["builder", "cache", "client", "framework", "gateway", "model", "http", "standard_framework", "utils", "rustls_backend"]
+default_native_tls = ["builder", "cache", "client", "framework", "gateway", "model", "http", "standard_framework", "utils", "native_tls_backend"]
 builder = ["utils"]
 cache = []
 collector = ["gateway", "model", "tokio/stream"]
-client = [
-    "http",
-    "typemap_rev"
-]
+client = ["http", "typemap_rev"]
 extras = []
 framework = ["client", "model", "utils"]
-gateway = [
-    "flate2",
-    "http",
-    "url",
-    "utils",
-]
+gateway = ["flate2", "http", "url", "utils"]
 http = ["url", "bytes"]
 absolute_ratelimits = ["http"]
 rustls_backend = ["reqwest/rustls-tls", "async-tungstenite/tokio-rustls"]
@@ -141,6 +111,7 @@ native_tls_backend = ["reqwest/native-tls", "async-tungstenite/tokio-native-tls"
 model = ["builder", "http"]
 voice-model = ["serenity-voice-model"]
 standard_framework = ["framework", "uwl", "command_attr", "static_assertions"]
+unstable = []
 utils = ["base64"]
 voice = ["client", "model"]
 
