--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -176,7 +176,7 @@ jobs:
         env:
           RUSTDOCFLAGS: -D broken_intra_doc_links
         run: |
-          cargo doc --no-deps --features collector,voice
+          cargo doc --no-deps --features collector,voice,unstable
           cargo doc --no-deps -p command_attr
 
   examples:
