Update to tokio 1.0 and reqwest 0.11

--- a/examples/e10_collectors/Cargo.toml
+++ b/examples/e10_collectors/Cargo.toml
@@ -9,4 +9,4 @@ features = ["framework", "standard_framework", "rustls_backend", "collector"]
 path = "../../"
 
 [dependencies]
-tokio = { version = "0.2", features = ["macros"] }
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
