--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,9 +46,9 @@ version = "1"
 
 [dependencies.reqwest]
 default-features = false
-features = ["json", "stream"]
+features = ["json", "multipart", "stream"]
 optional = true
-version = "0.10"
+version = "0.11"
 
 [dependencies.serenity-voice-model]
 path = "./voice-model"
@@ -63,7 +63,7 @@ version = "1.1"
 default-features = false
 features = ["tokio-runtime"]
 optional = true
-version = "0.9.3"
+version = "0.11"
 
 [dependencies.typemap_rev]
 optional = true
@@ -75,12 +75,12 @@ version = "^2.1"
 
 [dependencies.bytes]
 optional = true
-version = "0.5"
+version = "1.0"
 
 [dependencies.tokio]
-version = "0.2"
+version = "1.0"
 default-features = false
-features = ["fs", "macros", "rt-core", "sync", "time"]
+features = ["fs", "macros", "rt", "sync", "time"]
 
 [dependencies.futures]
 version = "0.3"
@@ -99,7 +99,7 @@ default = ["builder", "cache", "client", "framework", "gateway", "model", "http"
 default_native_tls = ["builder", "cache", "client", "framework", "gateway", "model", "http", "standard_framework", "utils", "native_tls_backend"]
 builder = ["utils"]
 cache = []
-collector = ["gateway", "model", "tokio/stream"]
+collector = ["gateway", "model"]
 client = ["http", "typemap_rev"]
 extras = []
 framework = ["client", "model", "utils"]
