--- a/examples/e04_message_builder/Cargo.toml
+++ b/examples/e04_message_builder/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2018"
 
 [dependencies]
 serenity = { path = "../../", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
-tokio = { version = "0.2", features = ["macros"] }
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
