--- a/examples/e05_command_framework/Cargo.toml
+++ b/examples/e05_command_framework/Cargo.toml
@@ -9,5 +9,5 @@ features = ["framework", "standard_framework", "rustls_backend"]
 path = "../../"
 
 [dependencies.tokio]
-version = "0.2"
-features = ["macros"]
+version = "1.0"
+features = ["macros", "rt-multi-thread"]
