--- a/examples/e06_sample_bot_structure/Cargo.toml
+++ b/examples/e06_sample_bot_structure/Cargo.toml
@@ -11,8 +11,8 @@ tracing-subscriber = "0.2"
 tracing-futures = "0.2" # needed so intrument works with async functions.
 
 [dependencies.tokio]
-version = "0.2"
-features = ["macros", "signal"]
+version = "1.0"
+features = ["macros", "signal", "rt-multi-thread"]
 
 [dependencies.serenity]
 features = ["cache", "framework", "standard_framework", "rustls_backend"]
