--- a/examples/e07_env_logging/Cargo.toml
+++ b/examples/e07_env_logging/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 tracing = "0.1"
 tracing-subscriber = "0.2"
 tracing-futures = "0.2" # needed so intrument works with async functions.
-tokio = { version = "0.2", features = ["macros"] }
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 
 [dependencies.serenity]
 features = ["client", "rustls_backend"]
