--- a/examples/e08_shard_manager/Cargo.toml
+++ b/examples/e08_shard_manager/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 env_logger = "0.6"
 log = "0.4"
-tokio = { version = "0.2", features = ["macros", "rt-core", "time"] }
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
 
 [dependencies.serenity]
 default-features = false
