--- a/examples/e12_global_data/Cargo.toml
+++ b/examples/e12_global_data/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2018"
 
 [dependencies]
 serenity = { path = "../../" }
-tokio = { version = "0.2", features = ["macros"] }
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
