--- a/voice-model/Cargo.toml
+++ b/voice-model/Cargo.toml
@@ -7,7 +7,7 @@ include = ["src/**/*.rs", "Cargo.toml"]
 keywords = ["discord", "api"]
 license = "ISC"
 name = "serenity-voice-model"
-readme = "README.md"
+# readme = "README.md"
 repository = "https://github.com/serenity-rs/serenity.git"
 version = "0.1.0"
 edition = "2018"
