--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,14 @@ features = ["json", "multipart", "stream"]
 optional = true
 version = "0.11"
 
+# Tokio v0.2
+[dependencies.reqwest_compat]
+package = "reqwest"
+default-features = false
+features = ["json", "stream"]
+optional = true
+version = "0.10"
+
 [dependencies.serenity-voice-model]
 path = "./voice-model"
 version = "0.1"
@@ -65,6 +73,14 @@ features = ["tokio-runtime"]
 optional = true
 version = "0.11"
 
+# Tokio v0.2
+[dependencies.async-tungstenite_compat]
+package = "async-tungstenite"
+default-features = false
+features = ["tokio-runtime"]
+optional = true
+version = "0.9"
+
 [dependencies.typemap_rev]
 optional = true
 version = "0.1.3"
@@ -77,10 +93,24 @@ version = "^2.1"
 optional = true
 version = "1.0"
 
+[dependencies.bytes_compat]
+package = "bytes"
+optional = true
+version = "0.5"
+
 [dependencies.tokio]
 version = "1.0"
-default-features = false
+default-features = true
+optional = true
 features = ["fs", "macros", "rt", "sync", "time"]
+
+# Tokio v0.2
+[dependencies.tokio_compat]
+package = "tokio"
+version = "0.2"
+optional = true
+default-features = true
+features = ["fs", "macros", "rt-core", "sync", "time", "stream"]
 
 [dependencies.futures]
 version = "0.3"
@@ -104,16 +134,23 @@ client = ["http", "typemap_rev"]
 extras = []
 framework = ["client", "model", "utils"]
 gateway = ["flate2", "http", "url", "utils"]
-http = ["url", "bytes"]
+http = ["url"]
 absolute_ratelimits = ["http"]
-rustls_backend = ["reqwest/rustls-tls", "async-tungstenite/tokio-rustls"]
-native_tls_backend = ["reqwest/native-tls", "async-tungstenite/tokio-native-tls"]
 model = ["builder", "http"]
 voice-model = ["serenity-voice-model"]
 standard_framework = ["framework", "uwl", "command_attr", "static_assertions"]
 unstable_discord_api = []
 utils = ["base64"]
 voice = ["client", "model"]
+
+# Backends
+rustls_backend = ["reqwest/rustls-tls", "async-tungstenite/tokio-rustls", "tokio", "rustls_backend_marker", "bytes"]
+rustls_tokio_0_2_backend = ["reqwest_compat/rustls-tls", "async-tungstenite_compat/tokio-rustls", "tokio_compat", "bytes_compat", "rustls_backend_marker"]
+rustls_backend_marker = []
+
+native_tls_backend = ["reqwest/native-tls", "async-tungstenite/tokio-native-tls", "tokio", "bytes", "native_tls_backend_marker"]
+native_tls_tokio_0_2_backend = ["reqwest_compat/native-tls", "async-tungstenite_compat/tokio-native-tls", "tokio_compat", "bytes_compat", "native_tls_backend_marker"]
+native_tls_backend_marker = []
 
 [package.metadata.docs.rs]
 all-features = true
