Add new default features. This reworks the default feature structure.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -125,8 +125,15 @@ version = "0.2"
 package = "http"
 
 [features]
-default = ["builder", "cache", "client", "framework", "gateway", "model", "http", "standard_framework", "utils", "rustls_backend"]
-default_native_tls = ["builder", "cache", "client", "framework", "gateway", "model", "http", "standard_framework", "utils", "native_tls_backend"]
+# Defaults with different backends
+default = ["default_no_backend" "rustls_backend"]
+default_native_tls = ["default_no_backend" "native_tls_backend"]
+default_tokio_0_2 = ["default_no_backend" "rustls_tokio_0_2_backend"]
+default_native_tls_tokio_0_2 = ["default_no_backend" "native_tls_tokio_0_2_backend"]
+
+# Serenity requires a backend, this picks all default features without a backend.
+default_no_backend = ["builder", "cache", "client", "framework", "gateway", "model", "http", "standard_framework", "utils"]
+
 builder = ["utils"]
 cache = []
 collector = ["gateway", "model"]
@@ -143,13 +150,17 @@ unstable_discord_api = []
 utils = ["base64"]
 voice = ["client", "model"]
 
-# Backends
+# Backends to pick from:
+# - Rustls Backends
 rustls_backend = ["reqwest/rustls-tls", "async-tungstenite/tokio-rustls", "tokio", "rustls_backend_marker", "bytes"]
 rustls_tokio_0_2_backend = ["reqwest_compat/rustls-tls", "async-tungstenite_compat/tokio-rustls", "tokio_compat", "bytes_compat", "rustls_backend_marker"]
+# Marks that a Rustls backend is active
 rustls_backend_marker = []
 
+# - Native TLS Backends
 native_tls_backend = ["reqwest/native-tls", "async-tungstenite/tokio-native-tls", "tokio", "bytes", "native_tls_backend_marker"]
 native_tls_tokio_0_2_backend = ["reqwest_compat/native-tls", "async-tungstenite_compat/tokio-native-tls", "tokio_compat", "bytes_compat", "native_tls_backend_marker"]
+# Marks that a Native TLS backend is active
 native_tls_backend_marker = []
 
 [package.metadata.docs.rs]
