--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,13 @@ include = ["src/**/*", "LICENSE.md", "README.md", "CHANGELOG.md", "build.rs"]
 
 [dependencies]
 bitflags = "1"
-tracing = "0.1"
 tracing-futures = "0.2"
 serde_json = "1"
 async-trait = "0.1"
+
+[dependencies.tracing]
+version = "0.1"
+features = ["log"]
 
 [dependencies.command_attr]
 path = "./command_attr"
