--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,8 @@ jobs:
           - no cache
           - no gateway
           - unstable Discord API features
-          - tokio 0.2 (rustls)
-          - tokio 0.2 (native-ls)
+          - rustls tokio 0.2
+          - native-tls tokio 0.2
 
         include:
           - name: beta
@@ -40,9 +40,9 @@ jobs:
             features: model http rustls_backend
           - name: unstable Discord API features
             features: default unstable_discord_api
-          - name: tokio 0.2 (rustls)
+          - name: rustls tokio 0.2
             features: default_tokio_0_2
-          - name: tokio 0.2 (native-tls)
+          - name: native-tls tokio 0.2
             features: default_native_tls_tokio_0_2
 
     steps:
