--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,10 +40,13 @@ jobs:
             features: model http rustls_backend
           - name: unstable Discord API features
             features: default unstable_discord_api
+            dont-test: true
           - name: rustls tokio 0.2
             features: default_tokio_0_2
+            dont-test: true
           - name: native-tls tokio 0.2
             features: default_native_tls_tokio_0_2
+            dont-test: true
 
     steps:
       - name: Checkout sources
@@ -86,7 +89,7 @@ jobs:
         run: cargo build --no-default-features --features "${{ matrix.features }}"
 
       - name: Test some features
-        if: matrix.features
+        if: !matrix.dont-test && matrix.features
         run: cargo test --no-default-features --features "${{ matrix.features }}"
 
   clippy:
