--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ serde_json = "1"
 async-trait = "0.1"
 
 [dependencies.tracing]
-version = "0.1.23"
+version = "^0.1.23"
 features = ["log"]
 
 [dependencies.command_attr]
