--- a/examples/e06_sample_bot_structure/Cargo.toml
+++ b/examples/e06_sample_bot_structure/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 dotenv = "0.15"
-tracing = "0.1.23"
+tracing = "^0.1.23"
 tracing-subscriber = "0.2"
 
 [dependencies.tokio]
