--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,11 @@ bitflags = "1.1"
 serde_json = "1"
 async-trait = "0.1.9"
 
+[dependencies.simd-json]
+version = "0.3.25"
+optional = true
+
+
 [dependencies.tracing]
 version = "0.1.23"
 features = ["log"]
