Add example 14 : slash commands

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -264,3 +264,6 @@ jobs:
       - name: 'Build example 13'
         working-directory: examples
         run: cargo build -p e13_parallel_loops
+      - name: 'Build example 14'
+        working-directory: examples
+        run: cargo build -p e14_slash_commands
