--- a/examples/e14_slash_commands/Cargo.toml
+++ b/examples/e14_slash_commands/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "e14_slash_commads"
+name = "e14_slash_commands"
 version = "0.1.0"
 authors = ["my name <my@email.address>"]
 edition = "2018"
