dont use --locked

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,7 +112,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: clippy
-          args: --workspace --locked --all-targets --all-features
+          args: --workspace --all-targets --all-features
   MSRV:
     runs-on: ubuntu-latest
 
