--- a/Cargo.toml
+++ b/Cargo.toml
@@ -127,6 +127,9 @@ features = ["std"]
 [dependencies.percent-encoding]
 version = "2.1"
 
+[dependencies.mime_guess]
+version = "2.0"
+
 [dev-dependencies.http_crate]
 version = "0.2"
 package = "http"
