--- a/Cargo.toml
+++ b/Cargo.toml
@@ -127,6 +127,9 @@ features = ["std"]
 [dependencies.percent-encoding]
 version = "2.1"
 
+[dependencies.mime]
+version = "0.3.16"
+
 [dependencies.mime_guess]
 version = "2.0"
 
