Add support for sticker packs, guild stickers, and sticker routes (#1395)
This adds the following features:

* Add/modify/delete guild stickers
* Fetch sticker information
* Fetch list of all nitro stickers
* Sending stickers in message (up to 3)

Breaking change as sticker module is moved out of the channel module
and to the root model module.

This also adds an additional `mime` and `mime_guess` dependencies as
Discord requires the mime type on the file part when creating a sticker
via multipart/form-data requests otherwise it will return a 500 Internal
Server Error. This dependency is also used by `reqwest` internally.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -146,6 +146,12 @@ features = ["std"]
 [dependencies.percent-encoding]
 version = "2.1"
 
+[dependencies.mime]
+version = "0.3.16"
+
+[dependencies.mime_guess]
+version = "2.0"
+
 [dev-dependencies.http_crate]
 version = "0.2"
 package = "http"
