--- a/Cargo.toml
+++ b/Cargo.toml
@@ -136,6 +136,12 @@ version = "0.8"
 features = ["dash"]
 optional = true
 
+[dependencies.mime]
+version = "0.3.16"
+
+[dependencies.mime_guess]
+version = "2.0"
+
 [dev-dependencies.http_crate]
 version = "0.2"
 package = "http"
