Fix all problems vicky found
- Added `offline` feature to sqlx dependency
- Commited `sqlx-data.json`
- Switched example number from 15 to 16
- Added example to /Makefile.toml and /examples/README.md
- Fixed copy-paste error in GitHub actions example number
- Added a small section in the example README.md which says that for detailed SQLx usage info (like `query!` vs `query_as!`) you can check their README

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -286,3 +286,22 @@ args = ["make", "run_example", "e13_parallel_loops"]
 [tasks.dev_build_13]
 command = "cargo"
 args = ["make", "build_example", "e13_parallel_loops"]
+
+[tasks.16]
+alias = "run_16"
+
+[tasks.run_16]
+command = "cargo"
+args = ["make", "run_example_release", "e16_sqlite_database"]
+
+[tasks.build_16]
+command = "cargo"
+args = ["make", "build_example_release", "e16_sqlite_database"]
+
+[tasks.dev_run_16]
+command = "cargo"
+args = ["make", "run_example", "e16_sqlite_database"]
+
+[tasks.dev_build_16]
+command = "cargo"
+args = ["make", "build_example", "e16_sqlite_database"]
