--- a/examples/e16_sqlite_database/Cargo.toml
+++ b/examples/e16_sqlite_database/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "e15_sqlite_database"
+name = "e16_sqlite_database"
 version = "0.1.0"
 authors = ["my name <my@email.address>"]
 edition = "2018"
@@ -7,4 +7,4 @@ edition = "2018"
 [dependencies]
 serenity = { path = "../../", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
-sqlx = { version = "0.5.7", features = ["runtime-tokio-rustls", "sqlite"] }
+sqlx = { version = "0.5.7", features = ["runtime-tokio-rustls", "sqlite", "offline"] }
