Revert "Add support for transport compression in the gateway (#1508)"
This reverts commit a2e899f0d4cfe89ed484d580c5ae8463d70a8c6e

The commit broke the gateway, preventing it from handling events
properly, such as the `READY` event not emitting. Hence, it is being
reverted.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,8 +66,6 @@ version = "0.4.10"
 
 [dependencies.flate2]
 optional = true
-default-features = false
-features = ["zlib"]
 version = "1.0.13"
 
 [dependencies.reqwest]
@@ -171,13 +169,12 @@ version = "0.4"
 
 [features]
 # Defaults with different backends
-default = ["default_no_backend", "rustls_backend", "transport_compression"]
-default_native_tls = ["default_no_backend", "native_tls_backend", "transport_compression"]
-default_tokio_0_2 = ["default_no_backend", "rustls_tokio_0_2_backend", "transport_compression"]
+default = ["default_no_backend", "rustls_backend"]
+default_native_tls = ["default_no_backend", "native_tls_backend"]
+default_tokio_0_2 = ["default_no_backend", "rustls_tokio_0_2_backend"]
 default_native_tls_tokio_0_2 = [
     "default_no_backend",
     "native_tls_tokio_0_2_backend",
-    "transport_compression",
 ]
 
 # Serenity requires a backend, this picks all default features without a backend.
@@ -208,7 +205,6 @@ standard_framework = ["framework", "uwl", "command_attr", "static_assertions"]
 unstable_discord_api = []
 utils = ["base64"]
 voice = ["client", "model"]
-transport_compression = ["gateway", "flate2"]
 
 # Enables simd accelerated parsing
 simdjson = ["simd-json"]
