--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,6 +88,7 @@ jobs:
       - name: Check minimal versions
         if: matrix.toolchain == 'nightly'
         run: cargo clean; cargo update -Z minimal-versions; cargo check
+      - run: rustup component add clippy --toolchain nightly-x86_64-unknown-linux-gnu
       - name: Lint
         if: matrix.toolchain == 'nightly'
         uses: actions-rs/cargo@v1
